<resources>
    <string name="app_name">Calc</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_point">.</string>
    <string name="number_C">CLE</string>
    <string name="number_Del">DEL</string>
    <string name="Generate">Пуск</string>
    <string name="customer">Ставка заказчика:</string>
    <string name="carrier">Ставка перевозчика:</string>
    <string name="bonus">Бонус:</string>
    <string name="pay">Метод оплаты:</string>
    <string-array name="pay">
        <item textsize="20sp">Б/Г з ПДВ</item>
        <item textsize="20sp">Б/Г на єдиний</item>
        <item textsize="20sp">Софт/Нал</item>
    </string-array>
</resources>
